# c-template

./: CMakeLists.txt  CMakePresets.json  build.sh  pre-build.sh
src/lib/: CMakeLists.txt  x.c  x.h
